--- a/arabic_archives.html
+++ b/arabic_archives.html
@@ -338,7 +338,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ARABIC VERSIONS</p>
+                                <p>ARABIC APPLICATIONS</p>
                                 <h3>KGSS</h3>
                                  <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -370,7 +370,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ARABIC VERSIONS</p>
+                                    <p>ARABIC APPLICATIONS</p>
                                     <h3>PRISS</h3>
                                     <p style="text-align: justify;">
                                         ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -403,7 +403,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ARABIC VERSIONS</p>
+                                    <p>ARABIC APPLICATIONS</p>
                                 <h3>PRESS</h3>
                                  <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -436,7 +436,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ARABIC VERSIONS</p>
+                                    <p>ARABIC APPLICATIONS</p>
                                     <h3>SECSS</h3>
                                     <p style="text-align: justify;">
                                         ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -469,7 +469,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ARABIC VERSIONS</p>
+                                    <p>ARABIC APPLICATIONS</p>
                                 <h3>KGPRISS</h3>
                                  <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -502,7 +502,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ARABIC VERSIONS</p>
+                                    <p>ARABIC APPLICATIONS</p>
                                     <h3>PRIPRESS</h3>
                                     <p style="text-align: justify;">
                                         ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -534,7 +534,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ARABIC VERSIONS</p>
+                                    <p>ARABIC APPLICATIONS</p>
                                 <h3>PRESECSS</h3>
                                  <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -566,7 +566,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ARABIC VERSIONS</p>
+                                    <p>ARABIC APPLICATIONS</p>
                                 <h3>KGPRIPRESS</h3>
                                  <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -599,7 +599,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ARABIC VERSIONS</p>
+                                    <p>ARABIC APPLICATIONS</p>
                                 <h3>PRIPRESECSS</h3>
                                  <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -632,7 +632,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ARABIC VERSIONS</p>
+                                    <p>ARABIC APPLICATIONS</p>
                                 <h3>KGPRIPRESECSS</h3>
                                  <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -665,7 +665,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ARABIC VERSIONS</p>
+                                    <p>ARABIC APPLICATIONS</p>
                                 <h3>AIS</h3>
                                  <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -698,7 +698,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>ARABIC VERSIONS</p>
+                                    <p>ARABIC APPLICATIONS</p>
                                 <h3>AUS</h3>
                                  <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
