--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                                             <ul id="navigation">                                                                                          
                                                 <li><a href="index.html">HOME</a>
                                                     <ul class="submenu">
-                                                        <li><a href="index.html">MAANDEEQ SYSTEMS</a></li>
-                                                        <li><a href="arabic_home.html">ARABIC SYSTEMS</a></li>
-                                                        <li><a href="english_home.html">ENGLISH SYSTEMS</a></li>
+                                                        <li><a href="index.html">MAANDEEQ PLATFORM</a></li>
+                                                        <li><a href="arabic_home.html">ARABIC PLATFORM</a></li>
+                                                        <li><a href="english_home.html">ENGLISH PLATFORM</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="exams.html">EXAMINATIONS</a>
