--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
                                                         <li><a href="english_archives.html">ENGLISH DOWNLOADS</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="contactus.html">CONTACTS</a>
+                                                <li><a href="contactus.html">CUSTOMERS</a>
                                                     <ul class="submenu">
-                                                        <li><a href="contactus.html">MAANDEEQ CONTACTS</a></li>
-                                                        <li><a href="arabic_systems.html">ARABIC INSTITUTIONS</a></li>
-                                                        <li><a href="english_systems.html">ENGLISH INSTITUTIONS</a></li>
+                                                        <li><a href="contactus.html">MAANDEEQ CUSTOMERS</a></li>
+                                                        <li><a href="arabic_systems.html">ARABIC CUSTOMERS</a></li>
+                                                        <li><a href="english_systems.html">ENGLISH CUSTOMERS</a></li>
                                                     </ul>
                                                 </li>
                                                 <!-- Button -->
