--- a/arabic_systems.html
+++ b/arabic_systems.html
@@ -339,8 +339,8 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>TYPE</th>
-                                <th>STATUS</th>
+                                <th>APPLICATION</th>
+                                <th>LANGUAGE</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -803,12 +803,12 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                               <th>INSTITUTION</th>
+                                <th>INSTITUTION</th>
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>TYPE</th>
-                                <th>STATUS</th>
+                                <th>APPLICATION</th>
+                                <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
                     </table>
