--- a/english_systems.html
+++ b/english_systems.html
@@ -335,12 +335,12 @@
                     <table id="example" class="display table-dark " style="width:100%">
                         <thead class="table-dark">
                             <tr>
-                               <th>INSTITUTION</th>
+                                <th>INSTITUTION</th>
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>TYPE</th>
-                                <th>STATUS</th>
+                                <th>APPLICATION</th>
+                                <th>LANGUAGE</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -807,8 +807,8 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>TYPE</th>
-                                <th>STATUS</th>
+                                <th>APPLICATION</th>
+                                <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
                     </table>
