--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
                                                 </li>
                                                 <li><a href="services.html">SERVICES</a>
                                                     <ul class="submenu">
-                                                        <li><a href="services.html">MAANDEEQ SERVICES</a></li>
-                                                        <li><a href="arabic_services.html">ARABIC SERVICES</a></li>
-                                                        <li><a href="english_services.html">ENGLISH SERVICES</a></li>
+                                                        <li><a href="services.html">MAANDEEQ SUBSCRIPTIONS</a></li>
+                                                        <li><a href="arabic_services.html">ARABIC SUBSCRIPTIONS</a></li>
+                                                        <li><a href="english_services.html">ENGLISH SUBSCRIPTIONS</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="products.html">PRODUCTS</a>
                                                     <ul class="submenu">
-                                                        <li><a href="products.html">MAANDEEQ PRODUCTS</a></li>
-                                                        <li><a href="arabic_products.html">ARABIC PRODUCTS</a></li>
-                                                        <li><a href="english_products.html">ENGLISH PRODUCTS</a></li>
+                                                        <li><a href="products.html">MAANDEEQ APPLICATIONS</a></li>
+                                                        <li><a href="arabic_products.html">ARABIC APPLICATIONS</a></li>
+                                                        <li><a href="english_products.html">ENGLISH APPLICATIONS</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="archives.html">DOWNLOADS</a>
