--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                                     <ul class="submenu">
                                                         <li><a href="contactus.html">MAANDEEQ CUSTOMERS</a></li>
                                                         <li><a href="arabic_systems.html">ARABIC CUSTOMERS</a></li>
-                                                        <li><a href="english_systems.html">ENGLISH INSTITUTIONS</a></li>
+                                                        <li><a href="english_systems.html">ENGLISH CUSTOMERS</a></li>
                                                     </ul>
                                                 </li>
                                                 <!-- Button -->
