--- a/institutes_services.html
+++ b/institutes_services.html
@@ -145,7 +145,7 @@
                 </div>
             </div>
         </section>
-        <!-- ? services-area -->
+        <!-- ? services-area
         <div class="services-area">
             <div class="container">
                 <div class="row justify-content-sm-center">
@@ -315,7 +315,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>  -->
         <!-- Courses area start -->
 
        
