--- a/index.html
+++ b/index.html
@@ -72,35 +72,35 @@
                                                 </li>
                                                 <li><a href="exams.html">EXAMINATIONS</a>
                                                     <ul class="submenu">
-                                                        <li><a href="exams.html">MAANDEEQ EXAMINATIONS</a></li>
+                                                        <li><a href="exams.html">SERVICES EXAMINATIONS</a></li>
                                                         <li><a href="arabic_exams.html">ARABIC EXAMINATIONS</a></li>
                                                         <li><a href="english_exams.html">ENGLISH EXAMINATIONS</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="services.html">SERVICES</a>
                                                     <ul class="submenu">
-                                                        <li><a href="services.html">MAANDEEQ SUBSCRIPTIONS</a></li>
+                                                        <li><a href="services.html">SERVICES SUBSCRIPTIONS</a></li>
                                                         <li><a href="arabic_services.html">ARABIC SUBSCRIPTIONS</a></li>
                                                         <li><a href="english_services.html">ENGLISH SUBSCRIPTIONS</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="products.html">PRODUCTS</a>
                                                     <ul class="submenu">
-                                                        <li><a href="products.html">MAANDEEQ APPLICATIONS</a></li>
+                                                        <li><a href="products.html">PRODUCTS APPLICATIONS</a></li>
                                                         <li><a href="arabic_products.html">ARABIC APPLICATIONS</a></li>
                                                         <li><a href="english_products.html">ENGLISH APPLICATIONS</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="archives.html">DOWNLOADS</a>
                                                     <ul class="submenu">
-                                                        <li><a href="archives.html">MAANDEEQ DOWNLOADS</a></li>
+                                                        <li><a href="archives.html">ARCHIVES DOWNLOADS</a></li>
                                                         <li><a href="arabic_archives.html">ARABIC DOWNLOADS</a></li> 
                                                         <li><a href="english_archives.html">ENGLISH DOWNLOADS</a></li>
                                                     </ul>
                                                 </li>
                                                 <li><a href="contactus.html">CUSTOMERS</a>
                                                     <ul class="submenu">
-                                                        <li><a href="contactus.html">MAANDEEQ CUSTOMERS</a></li>
+                                                        <li><a href="contactus.html">CONTACTS CUSTOMERS</a></li>
                                                         <li><a href="arabic_systems.html">ARABIC CUSTOMERS</a></li>
                                                         <li><a href="english_systems.html">ENGLISH CUSTOMERS</a></li>
                                                     </ul>
