--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                                         <li><a href="english_archives.html">ENGLISH DOWNLOADS</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="contactus.html">CUSTOMERS</a>
+                                                <li><a href="contactus.html">CONTACTS</a>
                                                     <ul class="submenu">
                                                         <li><a href="contactus.html">CONTACTS CUSTOMERS</a></li>
                                                         <li><a href="arabic_systems.html">ARABIC CUSTOMERS</a></li>
