--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                             <ul id="navigation">                                                                                          
                                                 <li><a href="index.html">HOME</a>
                                                     <ul class="submenu">
-                                                        <li><a href="index.html">MAANDEEQ PLATFORM</a></li>
+                                                        <li><a href="index.html">HOME PLATFORM</a></li>
                                                         <li><a href="arabic_home.html">ARABIC PLATFORM</a></li>
                                                         <li><a href="english_home.html">ENGLISH PLATFORM</a></li>
                                                     </ul>
