--- a/index.html
+++ b/index.html
@@ -1850,7 +1850,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>SMART APPLICATIONS</p>
+                                <p>ACADEMIC APPLICATIONS</p>
                                 <h3>SCHOOLS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1882,7 +1882,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>SMART APPLICATIONS</p>
+                                    <p>ACADEMIC APPLICATIONS</p>
                                     <h3>INSTITUTES</h3>
                                     <p style="text-align: justify;">
                                         ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1915,7 +1915,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>SMART APPLICATIONS</p>
+                                <p>ACADEMIC APPLICATIONS</p>
                                 <h3>UNIVERSITIES</h3>
                                 <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1951,7 +1951,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>SMART EXAMINATIONS</p>
+                                <p>ACADEMIC EXAMINATIONS</p>
                                 <h3>SCHOOLS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1983,7 +1983,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>SMART EXAMINATIONS</p>
+                                    <p>ACADEMIC EXAMINATIONS</p>
                                     <h3>INSTITUTES</h3>
                                     <p style="text-align: justify;">
                                         ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -2016,7 +2016,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>SMART EXAMINATIONS</p>
+                                <p>ACADEMIC EXAMINATIONS</p>
                                 <h3>UNIVERSITIES</h3>
                                 <p style="text-align: justify;">
                                     ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
