--- a/arabic_home.html
+++ b/arabic_home.html
@@ -2058,7 +2058,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>ARABIC</h2>
-                            <h2>APPLICATIONS</h2>
+                            <h2>PLATFORM</h2>
                             <h2>SERVICES</h2>
                         </div>
                     </div>
@@ -2940,7 +2940,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>ARABIC</h2>
-                            <h2>APPLICATIONS</h2>
+                            <h2>PLATFORM</h2>
                             <h2>PRODUCTS</h2>
                         </div>
                     </div>
