--- a/english_home.html
+++ b/english_home.html
@@ -2057,7 +2057,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>ENGLISH</h2>
-                            <h2>APPLICATIONS</h2>
+                            <h2>PLATFORM</h2>
                             <h2>SERVICES</h2>
                         </div>
                     </div>
@@ -2939,7 +2939,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>ENGLISH</h2>
-                            <h2>APPLICATIONS</h2>
+                            <h2>PLATFORM</h2>
                             <h2>PRODUCTS</h2>
                         </div>
                     </div>
