--- a/index.html
+++ b/index.html
@@ -2058,7 +2058,7 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>ACADEMIC</h2>
                             <h2>PLATFORM</h2>
-                            <h2>SERVICES</h2>
+                            <h2>APPLICATIONS</h2>
                         </div>
                     </div>
                 </div>
