--- a/index.html
+++ b/index.html
@@ -2496,7 +2496,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>ACADEMIC</h2>
+                           <h2>PLATFORM</h2>
                             <h2>EXAMINATIONS</h2>
                             <h2>SERVICES</h2>
                         </div>
@@ -3376,7 +3376,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>ACADEMIC</h2>
+                            <h2>PLATFORM</h2>
                             <h2>EXAMINATIONS</h2>
                             <h2>PRODUCTS</h2>
                         </div>
