--- a/english_home.html
+++ b/english_home.html
@@ -2058,7 +2058,8 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>ENGLISH</h2>
                             <h2>PLATFORM</h2>
-                            <h2>SERVICES</h2>
+                            <h2>APPLICATIONS</h2>
+                            <h2>PRODUCTS</h2>
                         </div>
                     </div>
                 </div>
