--- a/arabic_home.html
+++ b/arabic_home.html
@@ -2498,7 +2498,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>ARABIC</h2>
+                              <h2>ARABIC</h2>
+                              <h2>PLATFORM</h2>
                             <h2>EXAMINATIONS</h2>
                             <h2>SERVICES</h2>
                         </div>
@@ -2943,7 +2944,7 @@
                             <h2>ARABIC</h2>
                             <h2>PLATFORM</h2>
                             <h2>APPLICATIONS</h2>
-                            <h2>SERVICES</h2>
+                            <h2>PRODUCTS</h2>
                         </div>
                     </div>
                 </div>
@@ -3379,9 +3380,12 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
+
                             <h2>ARABIC</h2>
+                            <h2>PLATFORM</h2>
                             <h2>EXAMINATIONS</h2>
                             <h2>PRODUCTS</h2>
+
                         </div>
                     </div>
                 </div>
