--- a/arabic_home.html
+++ b/arabic_home.html
@@ -3827,6 +3827,7 @@
                             <h2>REGISTERED</h2>
                             <h2>ARABIC</h2>
                             <h2>PLATFORMS</h2>
+                             <h2>APPLICATIONS</h2>
                         </div>
                     </div>
                 </div>
