--- a/english_home.html
+++ b/english_home.html
@@ -2057,9 +2057,9 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>ENGLISH</h2>
-                            <h2>PLATFORM</h2>
+                              <h2>PLATFORM</h2>
                             <h2>APPLICATIONS</h2>
-                            <h2>PRODUCTS</h2>
+                            <h2>SERVICES</h2>
                         </div>
                     </div>
                 </div>
@@ -2498,6 +2498,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>ENGLISH</h2>
+                              <h2>PLATFORM</h2>
                             <h2>EXAMINATIONS</h2>
                             <h2>SERVICES</h2>
                         </div>
@@ -2941,6 +2942,7 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>ENGLISH</h2>
                             <h2>PLATFORM</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>PRODUCTS</h2>
                         </div>
                     </div>
@@ -3378,6 +3380,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>ENGLISH</h2>
+                            <h2>PLATFORM</h2>
                             <h2>EXAMINATIONS</h2>
                             <h2>PRODUCTS</h2>
                         </div>
@@ -3818,9 +3821,10 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>REGISTERED</h2>
-                            <h2>ENGLISH</h2>
-                            <h2>PLATFORMS</h2>
+                              <h2>REGISTERED</h2>
+                             <h2>ENGLISH</h2>
+                             <h2>PLATFORMS</h2>
+                             <h2>APPLICATIONS</h2>
                         </div>
                     </div>
                 </div>
