--- a/index.html
+++ b/index.html
@@ -2056,6 +2056,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
+                            <h2>ACADEMIC</h2>
                             <h2>PLATFORM</h2>
                             <h2>APPLICATIONS</h2>
                             <h2>SERVICES</h2>
@@ -2496,7 +2497,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                           <h2>PLATFORM</h2>
+                            <h2>ACADEMIC</h2>
+                            <h2>PLATFORM</h2>
                             <h2>EXAMINATIONS</h2>
                             <h2>SERVICES</h2>
                         </div>
@@ -2938,6 +2940,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
+                            <h2>ACADEMIC</h2>
                              <h2>PLATFORM</h2>
                             <h2>APPLICATIONS</h2>
                             <h2>PRODUCTS</h2>
@@ -3376,6 +3379,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
+                            <h2>ACADEMIC</h2>
                             <h2>PLATFORM</h2>
                             <h2>EXAMINATIONS</h2>
                             <h2>PRODUCTS</h2>
@@ -3820,6 +3824,7 @@
                             <h2>REGISTERED</h2>
                             <h2>ACADEMIC</h2>
                             <h2>PLATFORMS</h2>
+                            <h2>APPLICATIONS</h2>
                         </div>
                     </div>
                 </div>
