--- a/index.html
+++ b/index.html
@@ -4367,11 +4367,10 @@
                                    <div class="footer-tittle">
                                        <div class="footer-pera">
                                         <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;font-size: medium;">
-                                               In today’s fast-paced digital age, educational institutions are evolving rapidly to 
-                                               meet the demands of efficient administration and seamless communication. One transformative 
-                                               solution is the adoption of cloud-based school management systems. These systems offer an integrated 
-                                               platform to manage student records, attendance, grades, communication, and much more enhancing efficiency,
-                                               security, and accessibility.
+                                              An Education Management Information System (EMIS) is a structured system
+                                               designed to collect, manage, analyze, and report data related to the education sector. 
+                                               It supports planning, policy-making, and decision-making at all levels of education — from 
+                                               schools to ministries.
                                            </p>
                                        </div>
                                    </div>
