--- a/arabic_exams.html
+++ b/arabic_exams.html
@@ -328,6 +328,7 @@
                               <h2>ARABIC</h2>
                               <h2>PLATFORM</h2>
                               <h2>EXAMINATIONS</h2>
+                              <h2>SERVICES</h2>
                         </div>
                     </div>
                 </div>
@@ -748,6 +749,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>MONTHLY</h2>
+                            <h2>PLATFORM</h2>
                             <h2>EXAMINATIONS</h2>
                             <h2>SERVICES</h2>
                         </div>
@@ -1188,6 +1190,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>YEARLY</h2>
+                            <h2>PLATFORM</h2>
                             <h2>EXAMINATIONS</h2>
                             <h2>SERVICES</h2>
                         </div>
@@ -1638,6 +1641,7 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>REGISTERED</h2>
                             <h2>ARABIC</h2>
+                            <h2>PLATFORM</h2>
                             <h2>EXAMINATIONS</h2>
                         </div>
                     </div>
