--- a/arabic_exams.html
+++ b/arabic_exams.html
@@ -1657,7 +1657,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>APPLICATION</th>
+                                <th>PLATFORM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </thead>
@@ -2121,11 +2121,11 @@
                         </tbody>
                        <tfoot>
                             <tr>
-                               <th>INSTITUTION</th>
+                                <th>INSTITUTION</th>
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>APPLICATION</th>
+                                <th>PLATFORM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
