--- a/services.html
+++ b/services.html
@@ -1183,7 +1183,7 @@
                             <h2>REGISTERED</h2>
                             <h2>PLATFORMS</h2>
                             <h2>APPLICATIONS</h2>
-                            <h2>EXAMINATIONS</h2>
+                            <h2>SERVICES</h2>
                         </div>
                     </div>
                 </div>
@@ -1198,7 +1198,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>APPLICATION</th>
+                                <th>PLATFORM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </thead>
@@ -1666,7 +1666,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>APPLICATION</th>
+                                <th>PLATFORM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
