--- a/arabic_services.html
+++ b/arabic_services.html
@@ -325,8 +325,10 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                               <h2>MONTHLY</h2>
+                              <h2>MONTHLY</h2>
+                              <h2>ARABIC</h2>
                               <h2>PLATFORM</h2>
+                              <h2>APPLICATIONS</h2>
                               <h2>SERVICES</h2>
                         </div>
                     </div>
@@ -735,12 +737,16 @@
                     </div>
                 </div>
             
-             </div>  <div class="container">
+              </div> 
+
+              <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                              <h2>YEARLY</h2>
+                               <h2>YEARLY</h2>
+                               <h2>ARABIC</h2>
                               <h2>PLATFORM</h2>
+                              <h2>APPLICATIONS</h2>
                               <h2>SERVICES</h2>
                         </div>
                     </div>
@@ -1155,13 +1161,7 @@
                         </div>
                     </div>
                 </div> -->
-             </div>
-
-
-
-   
-
-    
+              </div>
 
         </div>
 
@@ -1175,7 +1175,9 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>REGISTERED</h2>
                             <h2>ARABIC</h2>
-                            <h2>EXAMINATIONS</h2>
+                            <h2>PLATFORMS</h2>
+                            <h2>APPLICATIONS</h2>
+                            <h2>SERVICES</h2>
                         </div>
                     </div>
                 </div>
@@ -1186,11 +1188,11 @@
                     <table id="example" class="display table-dark " style="width:100%">
                         <thead class="table-dark">
                             <tr>
-                                <th>INSTITUTION</th>
+                                 <th>INSTITUTION</th>
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>APPLICATION</th>
+                                <th>PLATFORM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </thead>
@@ -1658,7 +1660,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>APPLICATION</th>
+                                <th>PLATFORM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
