--- a/services.html
+++ b/services.html
@@ -326,6 +326,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                               <h2>MONTHLY</h2>
+                              <h2>ACADEMIC</h2>
                               <h2>PLATFORM</h2>
                               <h2>APPLICATIONS</h2>
                               <h2>SERVICES</h2>
@@ -749,6 +750,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                               <h2>YEARLY</h2>
+                              <h2>ACADEMIC</h2>
                               <h2>PLATFORM</h2>
                               <h2>APPLICATIONS</h2>
                               <h2>SERVICES</h2>
@@ -1181,6 +1183,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>REGISTERED</h2>
+                            <h2>ACADEMIC</h2>
                             <h2>PLATFORMS</h2>
                             <h2>APPLICATIONS</h2>
                             <h2>SERVICES</h2>
