--- a/arabic_services.html
+++ b/arabic_services.html
@@ -1698,8 +1698,8 @@
                                         <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;font-size: medium;">
                                                In today’s fast-paced digital age, educational institutions are evolving rapidly to 
                                                meet the demands of efficient administration and seamless communication. One transformative 
-                                               solution is the adoption of cloud-based school management systems. These systems offer an integrated 
-                                               platform to manage student records, attendance, grades, communication, and much more enhancing efficiency,
+                                               solution is the adoption of cloud-based institutions management systems. These systems offer an integrated 
+                                               platform to manage institutions records, attendance, grades, communication, and much more enhancing efficiency,
                                                security, and accessibility.
                                            </p>
                                        </div>
