--- a/products.html
+++ b/products.html
@@ -327,6 +327,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                               <h2>ACADEMIC</h2>
+                              <h2>PLATFORMS</h2>
                               <h2>APPLICATIONS</h2>
                               <h2>PRODUCTS</h2>
                         </div>
@@ -757,7 +758,9 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>REGISTERED</h2>
                             <h2>ACADEMIC</h2>
+                            <h2>PLATFORMS</h2>
                             <h2>APPLICATIONS</h2>
+                            <h2>PRODUCTS</h2>
                         </div>
                     </div>
                 </div>
