--- a/arabic_products.html
+++ b/arabic_products.html
@@ -326,6 +326,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                                <h2>ARABIC</h2>
+                              <h2>PLATFORMS</h2>
                               <h2>APPLICATIONS</h2>
                               <h2>PRODUCTS</h2>
                         </div>
@@ -771,7 +772,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>APPLICATION</th>
+                                <th>PLATFORM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </thead>
@@ -1239,7 +1240,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>APPLICATION</th>
+                                <th>PLATFORM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
