--- a/english_products.html
+++ b/english_products.html
@@ -327,6 +327,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                               <h2>ENGLISH</h2>
+                              <h2>PLATFORMS</h2>
                               <h2>APPLICATIONS</h2>
                               <h2>PRODUCTS</h2>
                         </div>
@@ -773,7 +774,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>APPLICATION</th>
+                                <th>PLATFORM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </thead>
@@ -1241,7 +1242,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>APPLICATION</th>
+                                <th>PLATFORM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
