--- a/products.html
+++ b/products.html
@@ -775,7 +775,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>APPLICATION</th>
+                                <th>PLATFORM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </thead>
@@ -1243,7 +1243,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>APPLICATION</th>
+                                <th>PLATFORM</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
