--- a/exams.html
+++ b/exams.html
@@ -749,6 +749,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>MONTHLY</h2>
+                            <h2>ACADEMIC</h2>
                             <h2>PLATFORM</h2>
                             <h2>EXAMINATIONS</h2>
                             <h2>SERVICES</h2>
@@ -1190,6 +1191,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>YEARLY</h2>
+                            <h2>ACADEMIC</h2>
                             <h2>PLATFORM</h2>
                             <h2>EXAMINATIONS</h2>
                             <h2>SERVICES</h2>
